--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="sport">Sport</string>
     <string name="culture">Culture</string>
     <string name="life_and_style">Life and Style</string>
+    <string name="no_internet_connection">No internet connection.</string>
 </resources>
